--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "parcel-bundler": "^1.6.2"
   },
   "scripts": {
-    "server": "nodemon server.js",
-    "client": "parcel -p 8091 index.html"
+    "server": "nodemon --watch server ./server/server.js",
+    "client": "parcel -p 8091 ./client/index.html"
   },
   "repository": {
     "type": "git",
