--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "learn apollo-graphql",
   "main": "index.js",
   "dependencies": {
+    "antd": "^3.3.1",
     "apollo-boost": "^0.1.3",
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
@@ -11,6 +12,7 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "mongoose": "^5.0.11",
     "react": "^16.2.0",
     "react-apollo": "^2.1.0-beta.3",
     "react-dom": "^16.2.0"
@@ -23,7 +25,8 @@
   },
   "scripts": {
     "server": "nodemon --watch server ./server/server.js",
-    "client": "parcel -p 8091 ./client/index.html"
+    "client": "parcel -p 8091 ./client/index.html",
+    "build": "parcel build ./client/client.js"
   },
   "repository": {
     "type": "git",
