--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "antd": "^3.3.1",
     "apollo-boost": "^0.1.3",
+    "apollo-engine": "^1.0.3",
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
